--- a/my-proyect/package.json
+++ b/my-proyect/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
+    "vite": "^7.3.1",
     "vitest": "^4.0.8"
   }
 }
